[gd_scene load_steps=7 format=3 uid="uid://cey5aj6ky2o2w"]

[ext_resource type="FontFile" uid="uid://eso1jehxw2yt" path="res://assets/font.png" id="1_iklsf"]
[ext_resource type="Script" path="res://scenes/hud.gd" id="2_15qi6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4hrj"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5nao6"]
bg_color = Color(1, 0.129412, 0.172549, 1)

[sub_resource type="Theme" id="Theme_8m3r3"]
Label/fonts/font = ExtResource("1_iklsf")
ProgressBar/styles/background = SubResource("StyleBoxFlat_p4hrj")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_5nao6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojx64"]
bg_color = Color(0.145098, 1, 0.188235, 1)

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8m3r3")
script = ExtResource("2_15qi6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Health" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/Health"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "15/15"
horizontal_alignment = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Health"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
max_value = 15.0
value = 5.96
show_percentage = false

[node name="Stamina" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StaminaLabel" type="Label" parent="MarginContainer/VBoxContainer/Stamina"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "100/100"
horizontal_alignment = 2

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/Stamina"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 7)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_ojx64")
value = 53.7
show_percentage = false

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level #4"
